console logged the value of totalYears which calculated all of the years that all of the inventors spent alive, combined

--- a/index.html
+++ b/index.html
@@ -53,11 +53,20 @@
 					return -1;
 				}
 			});
+
 			//return the results
 			console.log(ordered);
 
 			// Array.prototype.reduce()
 			// 4. How many years did all the inventors live?
+
+			//create a variable totalYears, to store the value of all of the inventors' years alive combined
+			const totalYears = inventors.reduce((total, inventor) => {
+				return total + (inventor.passed - inventor.year);
+			}, 0);
+			//console log the result
+			console.log(totalYears);
+
 			// 5. Sort the inventors by years lived
 			// 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
 			// https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
