--- a/index.html
+++ b/index.html
@@ -79,20 +79,22 @@
 
 			});
 
-			console.table(oldest);
-			// 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
-			//https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-			const category = document.querySelector('.mw-category');
-			const links = Array.from(category.querySelectorAll('a'));
-
-			const de = links
-				.map(link => link.textContent)
-				.filter(streetName => streetName.includes('de'));
-
+			// console.table(oldest);
+			// // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
+			// //https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+			// const category = document.querySelector('.mw-category');
+			// const links = Array.from(category.querySelectorAll('a'));
+			//
+			// const de = links
+			// 	.map(link => link.textContent)
+			// 	.filter(streetName => streetName.includes('de'));
+			//
 
 			// 7. sort Exercise
 			// Sort the people alphabetically by last name
-
+			const orderedAgain = people.sort(function(lastOne, nextOne) {
+				console.log(lastOne);
+			})
 
 			// 8. Reduce Exercise
 			// Sum up the instances of each of these
