--- a/index.html
+++ b/index.html
@@ -93,8 +93,12 @@
 			// 7. sort Exercise
 			// Sort the people alphabetically by last name
 			const orderedAgain = people.sort(function(lastOne, nextOne) {
-				console.log(lastOne);
-			})
+				const [aLast, aFirst] = lastOne.split(', ');
+				const [bLast, bFirst] = lastOne.split(', ');
+
+				return aLast > bLast ? -1 : 1;
+			});
+			console.log(orderedAgain);
 
 			// 8. Reduce Exercise
 			// Sum up the instances of each of these
