Commented out my previous code to clean up the console. I then created a new variable to store the result of my function that parses through each item in the "data" array and returns an object that holds each item in the array and how many times it occurred within that array.

--- a/index.html
+++ b/index.html
@@ -25,84 +25,94 @@
 				{first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909}
 			];
 			const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
-			// Array.prototype.filter()
-			// 1. Filter the list of inventors for those who were born in the 1500's
-
-			//give us the inventor and return boolean of true if both statements are true
-			const fifteen = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year <= 1600));
-			//display the results in the console
-			console.table(fifteen);
-
-			// Array.prototype.map()
-			// 2. Give us an array of the inventors' first and last names
-
-			//create a variable fullNames to store the fist and last names concatenated together
-			const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
-			//console log the result
-			console.log(fullNames);
-
-			// Array.prototype.sort()
-			// 3. Sort the inventors by birthdate, oldest to youngest
-
-			//create the variable ordered to store each of the inventors ordered by their birthday
-			const ordered = inventors.sort(function(a, b) {
-				//orders the inventors in ascending order
-				if(a.year > b.year) {
-					return 1;
-				} else {
-					return -1;
-				}
-			});
-
-			//return the results
-			console.log(ordered);
-
-			// Array.prototype.reduce()
-			// 4. How many years did all the inventors live?
-
-			//create a variable totalYears, to store the value of all of the inventors' years alive combined
-			const totalYears = inventors.reduce((total, inventor) => {
-				return total + (inventor.passed - inventor.year);
-			}, 0);
-			//console log the result
-			console.log(totalYears);
-
-			// 5. Sort the inventors by years lived
-			//create variable oldest to store the sorted array
-			const oldest = inventors.sort(function(a, b) {
-				//calculate years alive
-				const lastGuy = a.passed - a.year;
-				const nextGuy = b.passed - b.year;
-
-				//return the results from oldest to youngest
-				return lastGuy > nextGuy ? -1 : 1;
-
-			});
-
-			// console.table(oldest);
-			// // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
-			// //https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-			// const category = document.querySelector('.mw-category');
-			// const links = Array.from(category.querySelectorAll('a'));
+			// // Array.prototype.filter()
+			// // 1. Filter the list of inventors for those who were born in the 1500's
 			//
-			// const de = links
-			// 	.map(link => link.textContent)
-			// 	.filter(streetName => streetName.includes('de'));
+			// //give us the inventor and return boolean of true if both statements are true
+			// const fifteen = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year <= 1600));
+			// //display the results in the console
+			// console.table(fifteen);
 			//
-
-			// 7. sort Exercise
-			// Sort the people alphabetically by last name
-			const orderedAgain = people.sort(function(lastOne, nextOne) {
-				const [aLast, aFirst] = lastOne.split(', ');
-				const [bLast, bFirst] = lastOne.split(', ');
-
-				return aLast > bLast ? 1 : -1;
-			});
-			console.log(orderedAgain);
+			// // Array.prototype.map()
+			// // 2. Give us an array of the inventors' first and last names
+			//
+			// //create a variable fullNames to store the fist and last names concatenated together
+			// const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+			// //console log the result
+			// console.log(fullNames);
+			//
+			// // Array.prototype.sort()
+			// // 3. Sort the inventors by birthdate, oldest to youngest
+			//
+			// //create the variable ordered to store each of the inventors ordered by their birthday
+			// const ordered = inventors.sort(function(a, b) {
+			// 	//orders the inventors in ascending order
+			// 	if(a.year > b.year) {
+			// 		return 1;
+			// 	} else {
+			// 		return -1;
+			// 	}
+			// });
+			//
+			// //return the results
+			// console.log(ordered);
+			//
+			// // Array.prototype.reduce()
+			// // 4. How many years did all the inventors live?
+			//
+			// //create a variable totalYears, to store the value of all of the inventors' years alive combined
+			// const totalYears = inventors.reduce((total, inventor) => {
+			// 	return total + (inventor.passed - inventor.year);
+			// }, 0);
+			// //console log the result
+			// console.log(totalYears);
+			//
+			// // 5. Sort the inventors by years lived
+			// //create variable oldest to store the sorted array
+			// const oldest = inventors.sort(function(a, b) {
+			// 	//calculate years alive
+			// 	const lastGuy = a.passed - a.year;
+			// 	const nextGuy = b.passed - b.year;
+			//
+			// 	//return the results from oldest to youngest
+			// 	return lastGuy > nextGuy ? -1 : 1;
+			//
+			// });
+			//
+			// // console.table(oldest);
+			// // // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
+			// // //https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+			// // const category = document.querySelector('.mw-category');
+			// // const links = Array.from(category.querySelectorAll('a'));
+			// //
+			// // const de = links
+			// // 	.map(link => link.textContent)
+			// // 	.filter(streetName => streetName.includes('de'));
+			// //
+			//
+			// // 7. sort Exercise
+			// // Sort the people alphabetically by last name
+			// const orderedAgain = people.sort(function(lastOne, nextOne) {
+			// 	const [aLast, aFirst] = lastOne.split(', ');
+			// 	const [bLast, bFirst] = lastOne.split(', ');
+			//
+			// 	return aLast > bLast ? 1 : -1;
+			// });
+			// console.log(orderedAgain);
 
 			// 8. Reduce Exercise
 			// Sum up the instances of each of these
 			const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+
+			const vehicles = data.reduce(function(obj, item) {
+				if(!obj[item]) {
+					obj[item] = 0;
+				}
+				obj[item]++;
+				return obj;
+			}, {})
+
+			console.log(vehicles);
 		</script>
 	</body>
 </html>
