--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 			// 8. Reduce Exercise
 			// Sum up the instances of each of these
-			const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+			const data = ['car', 'car', 'truck', 'truck','pogo', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
 
 			const vehicles = data.reduce(function(obj, item) {
 				if(!obj[item]) {
